--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Débouchage Canalisation Créteil | Artiserv Débouchage - Urgence 24h/24</title>
     <meta name="description" content="Débouchage de canalisations à Créteil et en Val-de-Marne. Intervention urgente 24h/24 et 7j/7. Devis gratuit. WC, évier, douche, curage, inspection vidéo.">
     
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://debouchage-canalisation-creteil.fr/" />
+
     <!-- Google Fonts (optimisé) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
