Mise à jour automatique

--- a/contact.html
+++ b/contact.html
@@ -398,8 +398,7 @@
                         </svg>
                         <h3>Dans quelles villes intervenez-vous ?</h3>
                     </div>
-                    <p class="faq-answer">Nous intervenons sur Créteil et toute l'Val-de-Marne : Joué-lès-Créteil, Saint-Cyr-sur-Loire, Saint-Pierre-des-Corps, Chambray-lès-Créteil, et toutes les communes du département.</p>
-                </div>
+                    <p>Nous intervenons sur Créteil et dans tout le Val-de-Marne (94) : Bonneuil-sur-Marne, Saint-Maur-des-Fossés, Alfortville, Maisons-Alfort, Choisy-le-Roi, et toutes les communes du département.</p>
             </div>
         </div>
     </section>
